fix:[#1] AI 호출 구간 @Transactional 제거로 커넥션 풀 고갈 해결